# sneakattackproto

./: .gitignore  2024rallies.json  2025rallies.json  2026rallies.json  Cargo.toml  Dockerfile  Makefile  nonARArallies.json  uidsSmall.json
html/: generate-form.rb  timecomp.html  timecomp.html.erb
src/: lib.rs  main.rs  spreadsheet.rs  structures.rs
