[package]
name = "sneakattackproto"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["query"] }
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
rust_xlsxwriter = "0.84.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
